# take-minutes

./: CHANGELOG.md  README.md  pyproject.toml
src/minutes/: __init__.py  changes.py  changes_format.py  changes_parse.py  cli.py  cli_batch.py  cli_process.py  cli_search.py  cli_utils.py  cli_watch.py  config.py  embeddings.py  extractor.py  extractor_chunking.py  extractor_cleanup.py  extractor_dedup.py  filters.py  intent.py  intent_format.py  models.py  output.py  output_logs.py  output_markdown.py  parser.py  progress.py  reader.py  review.py  review_format.py  store.py  store_schema.py  store_search.py
tests/: test_changes.py  test_cli.py  test_extractor.py  test_intent.py  test_parser.py  test_reader.py  test_review.py  test_search.py
